write default config file if not available